# lumeris

./: .env.example  .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  task.txt  vite.config.ts
backend/: README.md  env.example
backend/src/: server.js
backend/tests/: cache.test.js  dashboard.test.js  defi.validation.test.js
ml-backend/: README.md  pyproject.toml  requirements.txt
ml-backend/lumeris_ml_backend/: __init__.py  api.py  data_fetcher.py  defi_predictor.py  gaming_recommender.py  sentiment_analyzer.py
ml-backend/notebooks/: 01_gaming_recommendations.ipynb  02_sentiment_analysis.ipynb  03_defi_predictions.ipynb  README.md  custom_style.css
src/: App.tsx  index.css
src/components/: AIChatInterface.tsx  AchievementSystem.tsx  AnimatedNotification.tsx  AnimatedWalletButton.tsx  ArenaFeaturesSection.tsx  ArenaFooter.tsx  ArenaHeader.tsx  ArenaHeroSection.tsx  ArenaLogo.tsx  BitcoinMountain.tsx  BitcoinMountainScore.tsx  CoinLogo.tsx  CryptoPriceTicker.tsx  DailyFeaturesButton.tsx  DailyGift.tsx  DailyLottery.tsx  ElementalLogo.tsx  EnergyFlow.tsx  EnhancedWalletModal.tsx  FeaturesSection.tsx  Footer.tsx  FuturisticLoader.tsx  GamingLogo.tsx  GamingWalletButton.tsx  Header.tsx  HeroSection.tsx  HolographicCard.tsx  HolographicPriceTicker.tsx  LegendaryPortalButton.tsx  LiveBettingSystem.tsx  LumerisFeaturesSection.tsx  LumerisFooter.tsx  LumerisHeader.tsx  LumerisHeroSection.tsx  LumerisLoadingScreen.tsx  MagneticButton.tsx  MatrixLogo.tsx  ParticleSystem3D.tsx  PerformanceSettings.tsx  PlanetDetails.tsx  (+4 more)
(+65 files in other folders)
